syntax = "proto3";

package invoices;

option go_package = "github.com/yourorg/invoice-backend/proto/invoice;invoice";

import "google/protobuf/timestamp.proto";

// ========================
// INVOICE SERVICE
// ========================
service InvoiceService {
  rpc CreateInvoice(CreateInvoiceRequest) returns (InvoiceResponse);
  rpc UpdateInvoice(UpdateInvoiceRequest) returns (InvoiceResponse);
  rpc DeleteInvoice(DeleteInvoiceRequest) returns (InvoiceResponse);

  rpc ListSentInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);
  rpc ListReceivedInvoices(ListInvoicesRequest) returns (ListInvoicesResponse);
}

message CreateInvoiceRequest {
  string user_id = 1;
  string recipient_id = 2;
  repeated InvoiceItem items = 3;
  string description = 4;
  google.protobuf.Timestamp due_date = 5;
}

message UpdateInvoiceRequest {
  string invoice_id = 1;
  bool mark_as_paid = 2;
  string description = 3;
  repeated InvoiceItem items = 4;
}

message DeleteInvoiceRequest {
  string invoice_id = 1;
}

message InvoiceResponse {
  string invoice_id = 1;
  string message = 2;
}

message ListInvoicesRequest {
  string user_id = 1;
}

message InvoiceInfo {
  string invoice_id = 1;
  string sender_id = 2;
  string recipient_id = 3;
  repeated InvoiceItem items = 4;
  string status = 5;
  string description = 6;
  google.protobuf.Timestamp due_date = 7;
  google.protobuf.Timestamp created_at = 8;
}

message ListInvoicesResponse {
  repeated InvoiceInfo invoices = 1;
}

message InvoiceItem {
  string title = 1;
  double amount = 2;
  string reference_id = 3;
}

